--- a/src/public/style/style.scss
+++ b/src/public/style/style.scss
@@ -197,6 +197,14 @@ div#room-setup {
 }
 
 /* ============================================================================
+    Access Page
+============================================================================ */
+
+#access-button {
+    margin-top: 1em;
+}
+
+/* ============================================================================
 	Canvas
 ============================================================================ */
 
